--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,6 @@
       "target": "es6",
       "module": "commonjs",
       "declaration": true,
-      "sourceMap": false
+      "sourceMap": true
     }
   }
