--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,10 @@
       "target": "es6",
       "module": "commonjs",
       "declaration": true,
-      "sourceMap": true
-    }
+      "sourceMap": true,
+      "outDir": "./target"
+    },
+    "include": [
+      "src/**/*"
+    ]
   }
