--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
-{
+  {
     "compilerOptions": {
-      "target": "es6",
-      "module": "commonjs",
+      "target": "es6",                          
+      "module": "commonjs",                     
+      "noEmitOnError": true,
       "declaration": true,
-      "sourceMap": true,
-      "outDir": "./target"
-    },
-    "include": [
-      "src/**/*"
-    ]
+      "sourceMap": true,               
+      "outDir": "out-tsc",
+      "rootDir": "./"
+    }
+    ,
+    "include": ["./src/**/*.ts"]
   }
