--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
     "module": "build/index.es.js",
     "scripts": {
         "clean": "rimraf dist",
-        "build": "npm run clean && tsc && rollup -c rollup.config.js",
-        "tsc": "tsc"
+        "build": "npm run clean && webpack",
+        "tsc": "tsc",
+        "run": "webpack-dev-server"
     },
     "repository": {},
     "devDependencies": {
-        "@open-wc/building-rollup": "^2.0.1",
-        "deepmerge": "^4.2.2",
         "rimraf": "^3.0.2",
-        "rollup": "^2.64.0",
-        "rollup-plugin-peer-deps-external": "^2.2.4",
-        "typescript": "^4.5.4"
+        "ts-loader": "^9.2.6",
+        "typescript": "^4.5.4",
+        "webpack": "^5.66.0",
+        "webpack-cli": "^4.9.1",
+        "webpack-dev-server": "^4.7.3"
     }
 }
