--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
   {
     "compilerOptions": {
-      "target": "es6",                          
-      "module": "commonjs",                     
+      "target": "ES5",                          
+      "module": "ES2015",                     
       "noEmitOnError": true,
       "declaration": true,
       "sourceMap": true,               
       "outDir": "out-tsc",
-      "rootDir": "./"
+      "rootDir": "./",
+      "importsNotUsedAsValues": "preserve"
     }
     ,
     "include": ["./src/**/*.ts"]
